# rust

./: .gitignore  .gitmodules  Cargo.toml  README.md
.github/ISSUE_TEMPLATE/: tracking_issue.md
.github/workflows/: build.yml  image.yml  release.yml
compiler/rustc_borrowck/src/: lib.rs
compiler/rustc_codegen_gcc/src/: builder.rs
compiler/rustc_codegen_llvm/: Cargo.toml
compiler/rustc_codegen_llvm/src/: attributes.rs  builder.rs  context.rs
compiler/rustc_codegen_llvm/src/back/: write.rs
compiler/rustc_codegen_llvm/src/llvm/: ffi.rs
compiler/rustc_codegen_ssa/: Cargo.toml
compiler/rustc_codegen_ssa/src/: codegen_attrs.rs  lib.rs
compiler/rustc_codegen_ssa/src/back/: link.rs
compiler/rustc_interface/src/: tests.rs
compiler/rustc_llvm/llvm-wrapper/: PassWrapper.cpp  RustWrapper.cpp
compiler/rustc_mir_transform/src/: add_retag.rs  shim.rs  validate.rs
compiler/rustc_session/src/: config.rs  options.rs  session.rs
compiler/rustc_span/src/: symbol.rs
src/bootstrap/defaults/: bootstrap.bsan.dev.toml  bootstrap.bsan.release.toml  config.bsan.dev.toml
src/ci/borsan/: Dockerfile.borsan
src/ci/bsan/: Dockerfile  Dockerfile.bsan  install.sh
src/ci/scripts/: free-disk-space.sh  sync.sh
src/tools/bsan/bsan-rt/: Cargo.toml  build.rs  cbindgen.toml
src/tools/bsan/bsan-rt/src/: block.rs  global.rs  hooks.rs  lib.rs  local.rs  shadow.rs  tests.rs
src/tools/bsan/bsan-rt/src/borrow_tracker/tree_borrows/: mod.rs  perms.rs
src/tools/bsan/bsan-rt/src/borrow_tracker/tree_borrows/tree/: tests.rs
src/tools/bsan/bsan-rt/src/tree_borrows/: mod.rs
(+36 files in other folders)
