[package]
name = "bsan-rt"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4"
libc = { version = "0.2.169", default-features = false }
hashbrown = { version = "0.15.2", default-features = false, features = ["default-hasher", "nightly", "inline-more"] }
rustc-hash = { version = "2.1.1", default-features = false }


[lib]
name = "bsan_rt"
crate-type = ["staticlib"] 
test = true     # we have unit tests
doctest = false # but no doc tests

[features]
ui_test = []

[build-dependencies]
cbindgen = "0.28.0"